# docs

./: .gitignore  README.md  index.html  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: publish-branch.yaml  publish-main.yaml  publish-tag.yaml  publish.yaml  workflow-publish.yaml
1.2.3bru/: 404.html  index.html  sitemap.xml
ciao/: 404.html  index.html  sitemap.xml
ciao/search/: search_index.json
current/: 404.html  index.html  sitemap.xml
docs/: index.md
feature-zio/: 404.html  index.html  sitemap.xml
