[project]
name = "idp-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs-material>=9.5.40",
    "mkdocs>=1.6.1",
    "mike>=2.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
